work on bulkImport and some refactoring and fixing stuff through sonarQube